# comfyui-asset-manager

./: .agent.md  .gitignore  .gitmodules  .kilocodemodes  GEMINI.md  README.md  __init__.py  dev_server.sh  pyproject.toml  setup.sh
.bmad-core/: install-manifest.yaml
.cursor/: mcp.json
.cursor/rules/: playwright-mcp-restart.mdc
.gemini/: settings.json
.gemini/bmad-method/: GEMINI.md
.github/workflows/: python-ci.yml  react-build.yml  react-ci.yml
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tasks.md  tech.md
.trae/rules/: qa.md
.vercel/: project.json
comfyui_asset_manager.egg-info/: PKG-INFO  SOURCES.txt
docs/development/: README.md  TODO.md  current-implementation-status.md  developer-guide.md  hexagonal-architecture.md  theme-integration-examples.md  theme-integration-guide.md  theme-integration-quick-reference.md
src/: __init__.py  config.py  container.py  main.py
src/adapters/: __init__.py
src/adapters/driven/: __init__.py  civitai_external_model_adapter.py  civitai_metadata_adapter.py  combined_external_model_adapter.py  comfyui_folder_adapter.py  comfyui_output_adapter.py  file_cache_adapter.py  filesystem_model_adapter.py  filesystem_output_adapter.py  huggingface_external_model_adapter.py  huggingface_metadata_adapter.py
src/adapters/driving/: __init__.py  web_api_adapter.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  base.py  external_metadata.py  external_model.py  folder.py  model.py  output.py
src/domain/ports/: __init__.py
src/domain/services/: __init__.py  external_model_service.py  folder_service.py  metadata_service.py  model_service.py  output_service.py
src/utils/: __init__.py  logger.py
tests/: test_basic_setup.py
tests/adapters/: __init__.py
tests/adapters/driven/: __init__.py  test_civitai_external_model_adapter.py  test_civitai_metadata_adapter.py  test_comfyui_folder_adapter.py  test_comfyui_output_adapter.py  test_file_cache_adapter.py  test_filesystem_model_adapter.py  test_filesystem_output_adapter.py  test_huggingface_external_model_adapter.py  test_huggingface_metadata_adapter.py
tests/adapters/driving/: __init__.py  test_web_api_adapter.py  test_web_api_adapter_external_models.py  test_web_api_adapter_metadata.py  test_web_api_adapter_outputs.py
tests/adapters/repositories/: __init__.py
tests/domain/: __init__.py
tests/domain/entities/: __init__.py  test_external_model.py  test_model.py  test_output.py
tests/domain/ports/: __init__.py  test_driven_ports.py  test_driving_ports.py
tests/domain/services/: test_external_model_service.py  test_folder_service.py  test_metadata_service.py  test_model_service.py  test_model_service_metadata.py  test_output_service.py  test_output_service_sorting_filtering.py
tests/integration/: test_application_setup.py  test_cache_integration.py  test_comfyui_integration.py  test_output_api_endpoints.py  test_output_details_endpoint.py  test_output_integration.py  test_workflow_loading_integration.py
tests/test_domain/test_entities/: test_model.py
tests/utils/: test_logger.py
ui/: .eslintrc.cjs  .gitignore  eslint.config.js  package-lock.json  package.json  playwright.config.ts  playwright.env.d.ts  pnpm-lock.yaml  test-theme-variables.html  tsconfig.json  validate-theme-system.html  vite.config.ts
ui/src/: App.css  App.tsx  index.css  main.tsx  setupTests.ts  vite-env.d.ts
ui/src/__tests__/: README-TestFixesSummary.md  (+3 more)
ui/tests-e2e/: README.md  app.spec.ts  global-setup.ts  local-assets.spec.ts  outputs-load-workflow.spec.ts  outputs.spec.ts
(+167 files in other folders)
