[project]
name = "comfyui-asset-manager"
description = "ComfyUI Asset Manager for managing assets in ComfyUI"
version = "0.1.0"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-asyncio>=0.21.0"]

[project.urls]
Repository = "https://github.com/rodpl/comfyui-asset-manager"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Poetry configuration for dependency management
[tool.poetry]
name = "comfyui-asset-manager"
version = "0.1.0"
description = "ComfyUI Asset Manager for managing assets in ComfyUI"
authors = ["rodpl"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"


# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

# Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "rodpl"
DisplayName = "ComfyUI Asset Manager"
Icon = ""
includes = ["dist/"]
