[project]
name = "comfyui-asset-manager"
description = "ComfyUI Asset Manager for managing assets in ComfyUI"
version = "0.1.0"
license = { file = "LICENSE" }
dependencies = ["aiohttp (>=3.12.14,<4.0.0)", "pillow (>=11.0.0,<12.0.0)"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-asyncio>=0.21.0"]

[project.urls]
Repository = "https://github.com/rodpl/comfyui-asset-manager"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Poetry configuration for dependency management
[tool.poetry]
name = "comfyui-asset-manager"
version = "0.1.0"
description = "ComfyUI Asset Manager for managing assets in ComfyUI"
authors = ["rodpl"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
aiohttp = "^3.12.14"
# Pillow 10.x does not provide wheels for Python 3.13. Bump to 11.x which supports 3.13
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5"
pytest-asyncio = "^0.23"
pytest-aiohttp = "^1.0.5"
aiohttp = "^3.12.14"


# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

# Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "rodpl"
DisplayName = "ComfyUI Asset Manager"
Icon = ""
includes = ["dist/"]
